[package]
name = "ser"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "*", optional = true }
erased-serde = { version = "*", optional = true }

[features]
std = []
serde_interop = ["std", "serde", "erased-serde"]

[dev-dependencies]
serde_test = "*"
serde_json = "*"